--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "phpwhois/phpwhois",
-    "description": "phpWhois - library for querying whois services and parsing results. Based on phpwhois.org",
+    "name": "php7whois/phpwhois",
+    "description": "phpWhois - library for querying whois services and parsing results. Based on phpwhois.org. works with php7",
     "keywords": ["PHP","Whois","phpWhois"],
     "homepage": "http://phpwhois.pw",
     "type": "library",
